--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -1,55 +1,107 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 
 
-/* Carousel Styles */
-.carousel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #d3d3d3;
-    height: 700px;
+.welcome {  
+  font-size: 2.5rem; 
+  background: linear-gradient(90deg, #74b628, #148f47);
+  color: #ffffff; 
+  text-align: center; 
+  /* margin-top: 20px;  
+  margin-bottom: 20px;   */
+  padding: 15px;
+  text-transform: uppercase;  
+  font-family: 'Arial', sans-serif; 
+  font-weight: bold; 
+  letter-spacing: 2px; 
+}  
+
+
+
+figure{
     position: relative;
-    overflow: hidden;
+    left: 0;
+    width: 400%; /* width dikali slide */
+    animation: 25s slide infinite;
 }
 
-.carousel .slider {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-    width: 100%; /* Ensure it spans the width of the parent */
-    overflow: hidden; /* Hide images that are out of view */
+.slide{
+    position: relative;
+    width: 25%; /* width dibagi slide */
+    float: left;
 }
 
-.carousel img {
-    object-fit: cover;
-    width: 100%; /* Corrected to include % unit */
-    height: 100%; /* Adjust the height to fit within the container */
-}
-
-.carousel .arrow {
+.slide h1{
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 2rem;
-    color: black;
-    cursor: pointer;
-    z-index: 10;
+    font-size: 3em;
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+    color: white;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-.carousel .arrow.left {
-    left: 20px;
+.slide img{
+    width: 100%;
+    height: 700px;
 }
 
-.carousel .arrow.right {
-    right: 20px;
+@keyframes slide{
+    0%{
+        left:0;
+    }
+    10%{
+        left:0;
+    }
+    20%{
+        left:-100%;
+    }
+    30%{
+        left:-100%;
+    }
+    40%{
+        left:-200%;
+    }
+    50%{
+        left:-200%;
+    }
+    55%{
+        left:-300%;
+    }
+    65%{
+        left:-300%;
+    }
+    66%{
+        left:-200%;
+    }
+    74%{
+        left:-200%;
+    }
+    75%{
+        left:-100%;
+    }
+    85%{
+        left:-100%;
+    }
+    90%{
+        left:0;
+    }
+    1000%{
+        left:0;
+    }
 }
+
 
 /* Footer Styles */
 .footer {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    font-size: 14px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+  background-color: #4caf50;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  font-size: 14px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
